@@ -1,3 +1,13 @@
+2006-06-22  simon.zheng  <simon.zheng@sun.com>
+
+        Fix for #336453
+
+        * acinclude.m4:
+        * configure.in:
+        * addressbook/e-book-backend-gal.h:
+        update patch for adding SunLDAP library support - a variant of 
+	Netscape LDAP.
+
 2006-06-17  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* configure.in: Up intltool requirement to 0.35.
